--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <base href="/">
-    <title>Angular With Webpack</title>
+    <title>Angular2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="venus.png">
 </head>
 <body>
 <my-app>Loading...</my-app>
